--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
             </head>
             
             <body>
-              <p>hello world.</p>
+              <p>hello peopleeee! What a lovely day we're having, huh?</p>
             </body>
             </html>
