--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             </head>
             
             <body>
-              <p>Why are we still here? Just to suffer?</p>
+              <p><a href="text.html">text page</a></p>
+              
             </body>
             </html>
