--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             </head>
             
             <body>
-              <p><a href="Text.html">Go look at my website >:( </a></p>
+              <p><a href="Text.html">Go look at my website! </a></p>
               
             </body>
             </html>
