--- a/Text.html
+++ b/Text.html
@@ -6,10 +6,16 @@
 <head>
 <meta charset="utf-8">
 <title>text demo</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@1&display=swap" rel="stylesheet">
 <style>
 html{
     background: rgb(43, 255, 0);
     color:rgb(0, 0, 0)
+}
+h1 {
+    font-family: 'Instrument Serif', serif;
 }
 </style>
 </head>
