--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
             </head>
             
             <body>
-              <p><a href="Text.html">Go look at my website!</a></p>
-              
+              <ul>
+                <li><a href="Text.html">Go look at my website!</a></li>
+                 <li><a href="Image.html">Just some pretty ocean scenery</a></li>
+                 <li><a href="Box.html">Boxes?</a></li>
             </body>
             </html>
